# logz_tf

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts  Blur.svelte  Footer.svelte  Header.svelte  Pagination.svelte  Table.svelte  global.css  stores.js
frontend/src/routes/processlogin/: +page.svelte
logs_api/: crud.py  db.py  main.py  models.py  r.py  schemas.py  sql_app.sqlite
logs_front/: package.json
